ура сообщения отправляет получает

--- a/chat.html
+++ b/chat.html
@@ -22,6 +22,7 @@
                 <a href="#" class="chat__link chat__exit link-reset">Выйти</a>
               </div>
               <div class="chat__dialogue dialogue">
+                <div class = "wrap" id = "chatWrap"></div>
                 <!-- <div class="dialogue__message dialogue__message--my message">
                   <span class="message__sender">Я:</span>
                   <p class="message__text">
@@ -142,8 +143,8 @@
                 <time class="message__time">19:13</time>
               </div>
 		</template>
-    <script src = "authorization.js" type="module"></script>
-		<script src="chat.js" type="module"></script>
-    <script src = "settings.js" type="module" ></script>
+    <script src = "authorization.js" defer type="module"></script>
+    <script src = "settings.js" defer type="module" ></script>
+    <script src="chat.js" defer type="module"></script>
 	</body>
 </html>
